# vtuber-impression-prediction

./: README.md
ml/: .gitignore  README.md  pyproject.toml
ml/configs/: audio_regressor.yaml  image_regressor.yaml  image_vit_regressor.yaml  img_all_best.yaml  videos_to_audio_features.yaml  videos_to_images.yaml
ml/src/: preprocess_videos_to_audio_features.py  preprocess_videos_to_images.py  train_audio_model.py  train_image_model.py  train_vit_model.py  valid_audio_model.py  valid_image_model.py
ml/src/dataset/: label.py  utils.py  vtuber_audios_dataset.py  vtuber_dataset.py  vtuber_imgs_dataset.py
ml/src/hydra_plugins/: random_id_provide.py
ml/src/model_modules/: audio_pl.py  config.py  const_model.py  pl.py  senet.py  utils.py  vgg1.py  vit_pl.py
ml/src/preprocess/: __init__.py  audio.py
ml/src/utils/: config.py  logging.py
preprocess/: README.md  pyproject.toml
preprocess/onom_list/: komatsu.txt  origin.txt
preprocess/src/: build_anonymized_dataset.py  build_consent_log.py  build_labeled_dataset.py  build_reward_docs.py  make_personality_system_sample.py  split_video_files.py
preprocess/src/process_raw_data/: clerical.py  utils.py
preprocess/src/process_raw_data/data_types/: raw.py  shaped.py
visualization/: README.md  pyproject.toml  word.txt
visualization/config/: model_log_img_all.yaml  model_log_mfcc.yaml
visualization/output/annotation/word/: word_list.txt
visualization/outputs/2023-02-15/16-21-46/.hydra/: hydra.yaml
visualization/outputs/2023-02-15/16-24-45/.hydra/: hydra.yaml
visualization/outputs/2023-02-15/16-26-14/.hydra/: hydra.yaml
visualization/src/: analysis_indi_diff.py  analysis_onom_per_system.py  model_log.py  summary-and-annotator.py  visualization.py
visualization/src/dataset/: __init__.py
visualization/src/utils/: __init__.py  config.py
visualization/src/word_cloud/: __init__.py
(+6 files in other folders)
