[tool.poetry]
name = "preprocess-for-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "preprocess_for_ml"}, {include = "src/process_raw_data"}]

[tool.poetry.dependencies]
python = "^3.10"
jaconv = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
